--- a/package.json
+++ b/package.json
@@ -11,5 +11,6 @@
 		"type": "git",
 		"url": "https://github.com/freeCodeCamp/boilerplate-npm.git"
 	},
-	"author": "Isaiah Ambi"
+	"author": "Isaiah Ambi",
+	"description": "A project that does something awesome"
 }
