--- a/package.json
+++ b/package.json
@@ -12,5 +12,6 @@
 		"url": "https://github.com/freeCodeCamp/boilerplate-npm.git"
 	},
 	"author": "Isaiah Ambi",
-	"description": "A project that does something awesome"
+	"description": "A project that does something awesome",
+	"keywords":["freeCodeCamp","start here"]
 }
