--- a/package.json
+++ b/package.json
@@ -13,5 +13,5 @@
 	},
 	"author": "Isaiah Ambi",
 	"description": "A project that does something awesome",
-	"keywords":["freeCodeCamp","start here"]
+	"keywords":["freecodecamp","start here"]
 }
