--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
 	"description": "A project that does something awesome",
 	"keywords":["freecodecamp","start here"],
 	"license": "MIT",
-	"version": "1.0"
+	"version": "1.0",
+	"dependencies": {
+		"@freecodecamp/example": "1.1.0"
+	  }
 }
