--- a/package.json
+++ b/package.json
@@ -15,8 +15,5 @@
 	"description": "A project that does something awesome",
 	"keywords":["freecodecamp","start here"],
 	"license": "MIT",
-	"version": "1.0",
-	"dependencies": {
-		"@freecodecamp/example": "^1.2.13"
-	  }
+	"version": "1.0"
 }
